[project]
name = "portmole"
version = "0.1.0"
description = "A tiny (and pretty) program for viewing + killing ports."
authors = [
    {name = "Kanishk Pachauri", email = "itskanishkp.py@gmail.com"},
]
dependencies = [
    "textual>=0.45.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "1"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "textual-dev>=1.2.1",
]
lint = [
    "pre-commit>=3.6.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]
